RESOLVED FIXED110792
IndexedDB: IDBObjectStore.index() doesn't report errors after deleteIndex()
https://bugs.webkit.org/show_bug.cgi?id=110792
Summary IndexedDB: IDBObjectStore.index() doesn't report errors after deleteIndex()
Joshua Bell
Reported 2013-02-25 13:50:36 PST
First reported at: https://code.google.com/p/chromium/issues/detail?id=177963 Basic repro: 1. Create a database with an object store and an index. Close the connection. 2. Open another connection with a higher version. During upgradeneed handling... 3. Use store.deleteIndex('indexname') to delete the index 4. Use store.index('indexname') to try and access it. Expected: The last step should fire a DOMException of type "NotFoundError". Actual: An IDBIndex is returned Critical to the repro is that from step 2 through step 3, store.index('indexname') is not called (e.g. to assert that the index is present before the delete). Otherwise, the exception is thrown as expected.
Attachments
Patch (5.89 KB, patch)
2013-02-25 14:01 PST, Joshua Bell
no flags
Joshua Bell
Comment 1 2013-02-25 14:01:03 PST
Joshua Bell
Comment 2 2013-02-25 14:01:48 PST
alecflett@ - can you take a look?
Alec Flett
Comment 3 2013-02-25 19:05:54 PST
Lgtm
Joshua Bell
Comment 4 2013-02-25 19:08:13 PST
Tony@ - r?
WebKit Review Bot
Comment 5 2013-02-26 10:46:04 PST
Comment on attachment 190121 [details] Patch Clearing flags on attachment: 190121 Committed r144075: <http://trac.webkit.org/changeset/144075>
WebKit Review Bot
Comment 6 2013-02-26 10:46:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.