IndexedDB: IDBObjectStore.index() doesn't report errors after deleteIndex() https://bugs.webkit.org/show_bug.cgi?id=110792

Reviewed by Tony Chang.

Source/WebCore:

The object store's metadata wasn't updated if the index hadn't been accessed
by script and hence placed in the name->object map. Make sure the metadata
is always updated.

Test: storage/indexeddb/deleteIndex-bug110792.html

* Modules/indexeddb/IDBObjectStore.cpp:
(WebCore::IDBObjectStore::deleteIndex): Always update the object store's metadata.

LayoutTests:

Added regression test for bug.

* storage/indexeddb/deleteIndex-bug110792-expected.txt: Added.
* storage/indexeddb/deleteIndex-bug110792.html: Added.


Canonical link: https://commits.webkit.org/129178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144075 268f45cc-cd09-0410-ab3c-d52691b4dbfc